--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ryum91/kakaowork-api.git"
+  },
   "author": "ryum91",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.24.0",
-    "typescript": "^4.4.4"
+    "axios": "^0.24.0"
   },
   "devDependencies": {
     "@types/node": "^16.11.6",
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "tsdx": "^0.14.1",
+    "typescript": "^4.4.4"
   }
 }
