--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kakaowork-api",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "kakaowork bot api",
   "main": "index.js",
   "scripts": {
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/node": "^16.11.6",
     "prettier": "^2.4.1",
+    "standard-version": "^9.3.2",
     "tsdx": "^0.14.1",
     "typescript": "^4.4.4"
   }
