--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "kakaowork-api",
   "version": "0.0.3-alpha.0",
   "description": "kakaowork bot api",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rm -rf ./dist",
+    "build": "npm run clean && tsc",
+    "release:alpha": "standard-version --prerelease alpha"
   },
   "repository": {
     "type": "git",
@@ -12,6 +14,14 @@
   },
   "author": "ryum91",
   "license": "MIT",
+  "keywords": [
+    "kakao",
+    "kakaotalk",
+    "kakaowork"
+  ],
+  "bugs": {
+    "url": "https://github.com/ryum91/kakaowork-api/issues"
+  },
   "dependencies": {
     "axios": "^0.24.0"
   },
@@ -19,7 +29,6 @@
     "@types/node": "^16.11.6",
     "prettier": "^2.4.1",
     "standard-version": "^9.3.2",
-    "tsdx": "^0.14.1",
     "typescript": "^4.4.4"
   }
 }
